# kigo_xcvario_simulator

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
.githooks/: commit-msg
android_bridge/: README.md  build_apk.sh  install_bridge.sh
kigo_xcvario_simulator/: __init__.py  airport_lookup.py  baro.py  bridge_control.py  config.py  contracts.py  control_api.py  flarm_adapter.py  flarm_passthrough.py  flight_math.py  flight_model.py  nmea.py  orchestrator.py  presets.py  pty_bridge.py  scheduler.py  session.py  start_remote_runtime.py  state.py  sxhawk_adapter.py  traffic_database.py  traffic_model.py  variation.py  xcvario_adapter.py  xcvario_parser.py  xcvario_polar.py
kigo_xcvario_simulator/examples/: runtime.example.json  sxhawk_profile_snippet.txt  xcsoar_profile_snippet.txt
kigo_xcvario_simulator/panel/: README.md  start_frontend.py
project_tech_documentation/: README.md
tests/: __init__.py  test_xcvario_sim_airport_lookup.py  test_xcvario_sim_baro.py  test_xcvario_sim_bridge_control.py  test_xcvario_sim_config.py  test_xcvario_sim_control_api.py  test_xcvario_sim_end_to_end.py  test_xcvario_sim_flarm_adapter.py  test_xcvario_sim_flarm_passthrough.py  test_xcvario_sim_flight_math.py  test_xcvario_sim_flight_model.py  test_xcvario_sim_nmea.py  test_xcvario_sim_orchestrator.py  test_xcvario_sim_panel.py  test_xcvario_sim_presets.py  test_xcvario_sim_pty_bridge.py  test_xcvario_sim_session.py  test_xcvario_sim_sxhawk_adapter.py  test_xcvario_sim_traffic_model.py  test_xcvario_sim_variation.py  test_xcvario_sim_xcvario_adapter.py
(+13 files in other folders)
